      systemd files being symlinks to /dev/null.
      (Closes: #718563)

  * debian/changelog:
    + [NT] Correct some older tag summaries to include some
      missing tags in the entry for 2.5.11 and 2.5.12.
  * debian/copyright:
    + [NT] Add Bastien ROUCARIÈS to maintainers (as BR).

  * frontend/lintian:
    + [NT] Move some handling of overrides to Lintian::Tags.

  * lib/Lintian/Tags.pm:
    + [NT] Take over some handling of overrides from the
      frontend.

 -- Niels Thykier <niels@thykier.net>  Wed, 24 Jul 2013 10:30:01 +0200

lintian (2.5.15) unstable; urgency=low

  "use less qw(memory);"

  * Summary of tag changes:
    + Added:
      - composer-package-without-pkg-php-tools-builddep
      - init-script-is-not-a-file
      - init.d-script-does-not-source-init-functions
      - maintainer-script-calls-systemctl
      - manpage-named-after-build-path
      - missing-pkg-php-tools-addon
      - missing-pkg-php-tools-buildsystem
      - pear-channel-without-pkg-php-tools-builddep
      - pear-package-but-missing-dependency
      - pear-package-feature-requires-newer-pkg-php-tools
      - pear-package-not-using-substvar
      - pear-package-without-pkg-php-tools-builddep
      - pecl-package-requires-build-dependency
      - service-file-is-not-a-file
      - systemd-no-service-for-init-script
      - systemd-service-file-outside-lib
      - systemd-service-file-refers-to-obsolete-target
      - systemd-tmpfiles.d-outside-usr-lib

  * checks/*.pm:
    + [NT] Add final return to all subs in checks and ensure
      that the "run" sub complies with Lintian's own
      recommendation.
  * checks/binary.pm:
    + [NT] Apply patch from Bastien Roucariès to fix false-
      negatives for debug files in usr/lib/debug/.build-id.
      (Closes: #714191)
    + [NT] Apply patch from Bastien Roucariès to fix false-
      positive debug-file-with-no-debug-symbols for files
      using compressed debug sections.
  * checks/fields.pm: